Added answer.py and answer.ipynb to the gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+**/answer.py
+**/answer.ipynb
+
 # Created by https://www.toptal.com/developers/gitignore/api/macos,windows,linux,python,qt,qtcreator
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,windows,linux,python,qt,qtcreator
 
