--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 **/answer.ipynb
 **/answers.py
 **/answers.ipynb
+**/dataset
+**/models
 
 # Created by https://www.toptal.com/developers/gitignore/api/macos,windows,linux,python,qt,qtcreator
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,windows,linux,python,qt,qtcreator
